# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  Dockerfile  README.md  docker-compose.yml  openapi.yml  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy.yml  vm-init.yml
app/: bootstrap_runner.py  gunicorn_config.py  main.py  models.py
app/core/: auth.py  bootstrap.py  constants.py  cors.py  database.py  exception_handlers.py  exceptions.py  hasher.py  logger.py  middleware.py  rate_limiter.py  rbac.py  responses.py  security.py  settings.py
app/database/: engine.py
app/dependencies/: __init__.py  auth.py  current_user.py  services.py  session.py
app/models/: __init__.py  base.py  careertrack.py  course.py  email.py  permission.py  prerequisite.py  program.py  rebuild.py  refresh_session.py  role.py  user.py  userprogress.py
app/repositories/: __init__.py  base.py  careertrack.py  course.py  email.py  permission.py  prerequisite.py  program.py  refresh_session.py  role.py  user.py  userprogress.py
app/routers/: __init__.py  auth.py  career_tracks.py  careertrack.py  courses.py  permission.py  programs.py  progress.py  role.py  users.py
app/schemas/: __init__.py  auth.py  base.py  careertrack.py  course.py  filters.py  prerequisite.py  program.py  token.py  user.py  userprogress.py
app/services/: __init__.py  auth.py  authenticator.py  careertrack.py  course.py  email.py  permission.py  program.py  progress.py  role.py  user.py
app/templates/: change_password.html  verify_account.html
deploy/: ansible.cfg  requirements.yml
deploy/group_vars/: all.yml
deploy/inventory/: prod.yml
deploy/playbooks/: build_and_push.yml  deploy_compose.yml  init_vm.yml
deploy/templates/: docker-compose.j2  env.j2
html/: index.html
migrations/: env.py
migrations/versions/: 0bc7ec9c9770_fix_models.py  (+11 more)
nginx/: nginx.conf
(+1 files in other folders)
